--- a/news_api.ipynb
+++ b/news_api.ipynb
@@ -19,7 +19,7 @@
     "from colorama import Fore,Style,Back                # for words color\n",
     "from tabulate import tabulate                       # for table\n",
     "import requests                                     # for getting data from the server\n",
-    "import pandas as pd                                 # for crating dataframes\n",
+    "import pandas as pd                                 # for creating dataframes\n",
     "import getpass                                      # to hide api key"
    ]
   },
